created registration function

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SERVER_URL=4444
 DATA_BASE=mongodb+srv://kristgalstyan417:8520@cluster0.ck2qhkg.mongodb.net/
+JWT_ACCESS_TOKEN=sdad32r2rnsadf512r2!@dxz549acxq2$!@!
