made a function to send an activation message to gmail

--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 SERVER_URL=4444
 DATA_BASE=mongodb+srv://kristgalstyan417:8520@cluster0.ck2qhkg.mongodb.net/
 JWT_ACCESS_TOKEN=sdad32r2rnsadf512r2!@dxz549acxq2$!@!
+SMTP_HOST=smtp.gmail.com
+
+
+SMTP_PORT=587
+SMTP_USER=kapan.shopping2023@gmail.com
+
+SMTP_PASSWORD=dyrsuwmgquaypayl
+
+API_URL=http://localhost:4444/
+CLIENT_URL=http://localhost:3000/
