--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
